# Tushi_Memories

./: .gitignore  README.md  data.csv  pyproject.toml  requirements.txt  style.css
Gift_app/: .gitignore  app.py
app/: tushi_memories.py
tushi_guess_game/: __init__.py
